pkg/main/default/objects/AgreementConfiguration__c/fields/FolderId__c.field-meta.xml
<CustomField>
	<fullName>FolderId__c</fullName>
	<externalId>true</externalId>
	<label>Folder Id</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
	<unique>true</unique>
</CustomField>