pkg/main/default/objects/AgreementConfiguration__c/fields/SourceObject__c.field-meta.xml
<CustomField>
	<fullName>SourceObject__c</fullName>
	<externalId>true</externalId>
	<label>Source Object</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>