pkg/main/default/objects/AgreementConfiguration__c/fields/TempFolderId__c.field-meta.xml
<CustomField>
	<fullName>TempFolderId__c</fullName>
	<externalId>true</externalId>
	<label>Temp Folder Id</label>
	<length>255</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>